GUI added buttons
Trying to load Qt GUI with CMake

Signed-off-by: hahaSK <xlahvi00@vutbr.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,18 +9,70 @@
 ##  CMakeLists.txt created: 2018-Mar-09
 ##===========================================================
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.11)
 project(Calculator)
+
+###
+# generate proper GUI program on specified platform
+if(WIN32) # Check if we are on Windows
+    if(MSVC) # Check if we are using the Visual Studio compiler
+        set_target_properties(${PROJECT_NAME} PROPERTIES
+                WIN32_EXECUTABLE YES
+                LINK_FLAGS "/ENTRY:mainCRTStartup"
+                )
+    elseif(CMAKE_COMPILER_IS_GNUCXX)
+        # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows") # Not tested
+    else()
+        message(SEND_ERROR "You are using an unsupported Windows compiler! (Not MSVC or GCC)")
+    endif(MSVC)
+elseif(APPLE)
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+            MACOSX_BUNDLE YES
+            )
+elseif(UNIX)
+    # Nothing special required
+else()
+    message(SEND_ERROR "You are on an unsupported platform! (Not Win32, Mac OS X or Unix)")
+endif(WIN32)
+###
 
 #For VS environment
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(RESOURCE_FILES main.cpp math_lib/mathematical_library.cpp)
+set(SOURCE_FILES main.cpp math_lib/mathematical_library.cpp)
 set(HEADER_FILES math_lib/mathematical_library.h)
 
-add_executable(Calculator ${RESOURCE_FILES} ${HEADER_FILES})
+### GUI ###
+set(SOURCES mainwindow.cpp)
+
+set(MOC_HEADERS mainwindow.h)
+
+set(UIS mainwindow.ui)
+
+set(RESOURCES imageresources.qrc)
+
+# Next lines needed for building all Qt projects
+set(CMAKE_AUTOMOC ON)
+find_package(Qt4 4.6.0 REQUIRED QtGui QtXml)
+find_package(Qt4 REQUIRED)
+include(${QT_USE_FILE})
+add_definitions(${QT_DEFINITIONS})
+include_directories(${CMAKE_BINARY_DIR})
+
+# Next, using precompiler, compiler and linker
+
+# using Qt meta-system (precompiler)
+QT4_ADD_RESOURCES(RES_SOURCES ${RESOURCES})
+QT4_WRAP_UI(UI_HEADERS ${UIS})
+QT4_WRAP_CPP(MOC_SRCS ${MOC_HEADERS})
+
+
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES}  ${SOURCES} ${MOC_SRCS} ${RES_SOURCES} ${UI_HEADERS})
+
+# Use the Widgets module from Qt.
+target_link_libraries(PROJECT_NAME ${QT_LIBRARIES})
 
 ##########################
 ##  TESTS
