Implemented GUI, also works on Windows
also modified CMakeLists. Now creates bin folder in src with
executables.

Signed-off-by: hahaSK <xlahvi00@vutbr.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,30 +12,9 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(Calculator)
 
-###
-# generate proper GUI program on specified platform
-if(WIN32) # Check if we are on Windows
-    if(MSVC) # Check if we are using the Visual Studio compiler
-        set_target_properties(${PROJECT_NAME} PROPERTIES
-                WIN32_EXECUTABLE YES
-                LINK_FLAGS "/ENTRY:mainCRTStartup"
-                )
-    elseif(CMAKE_COMPILER_IS_GNUCXX)
-        # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows") # Not tested
-    else()
-        message(SEND_ERROR "You are using an unsupported Windows compiler! (Not MSVC or GCC)")
-    endif(MSVC)
-elseif(APPLE)
-    set_target_properties(${PROJECT_NAME} PROPERTIES
-            MACOSX_BUNDLE YES
-            )
-elseif(UNIX)
-    # Nothing special required
-else()
-    message(SEND_ERROR "You are on an unsupported platform! (Not Win32, Mac OS X or Unix)")
-endif(WIN32)
-###
-
+# create exacutables in src/bin
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+   
 #For VS environment
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
@@ -55,10 +34,10 @@ set(GUI_UIS mainwindow.ui)
 set(GUI_RESOURCES imageresources.qrc)
 
 # Next lines needed for building all Qt projects
-find_package(Qt4 REQUIRED)
-include(${QT_USE_FILE})
-add_definitions(${QT_DEFINITIONS})
-include_directories(${CMAKE_BINARY_DIR})
+if(WIN32)
+set(Qt5_DIR "D:/Programovanie/Qt/5.10.1/msvc2017_64/lib/cmake/Qt5")
+endif(WIN32)
+find_package(Qt5 COMPONENTS Core Widgets Gui)
 
 # Next, using precompiler, compiler and linker
 
@@ -78,7 +57,7 @@ elseif(WIN32) # if you using Windows ™ Operating System.
 endif(UNIX)
 
 # build it (link libraries)
-target_link_libraries( ${PROJECT_NAME} ${QT_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} Qt5::Core Qt5::Gui Qt5::Widgets)
 
 ##########################
 ##  TESTS
