--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Qt Creator build folder
 build-Calculator-Desktop*/
+.qmake.stash
+Calculator.pro*
+Calculator.vcxproj*
 
 # Visual studio folders and files
 *.vs
