Ready to merge to master - deleted GUI folder
Signed-off-by: hahaSK <xlahvi00@vutbr.cz>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ build-Calculator-Desktop*/
 .qmake.stash
 Calculator.pro*
 Calculator.vcxproj*
+# remove GUI folder, merging to master
+GUI
 
 # Visual studio folders and files
 *.vs
