--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,13 +17,13 @@ project(runTests)
 set(gtest_force_shared_crt TRUE)
 
 #Google tests
-add_subdirectory(tests/googletest-master)
-include_directories(tests/googletest-master/googletest/include)
-include_directories(tests/googletest-master/googlemock/include)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests/googletest-master)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests/googletest-master/googletest/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests/googletest-master/googlemock/include)
 
-set(GTEST_LIBRARY tests/googletest-master/googletest)
-set(GTEST_INCLUDE_DIR tests/googletest-master/googletest/include)
-set(GTEST_MAIN_LIBRARY tests/googletest-master/googletest)
+set(GTEST_LIBRARY /tests/googletest-master/googletest)
+set(GTEST_INCLUDE_DIR /tests/googletest-master/googletest/include)
+set(GTEST_MAIN_LIBRARY /tests/googletest-master/googletest)
 
 enable_testing()
 find_package(GTest REQUIRED)
