improved Top-level Makefile, CPack and uninstaller
Signed-off-by: hahaSK <xlahvi00@vutbr.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,9 +16,9 @@ project(Calculator)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 
 #For VS environment
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES main.cpp math_lib/mathematical_library.cpp)
 set(HEADER_FILES math_lib/mathematical_library.h)
@@ -85,6 +85,12 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt)
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
 
+# Create bin directory
+install (DIRECTORY DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/bin" DIRECTORY_PERMISSIONS
+        OWNER_WRITE OWNER_READ OWNER_EXECUTE
+        GROUP_WRITE GROUP_READ GROUP_EXECUTE
+        WORLD_WRITE WORLD_READ WORLD_EXECUTE)
+
 #
 # Tell CMake to install the windows runtime libraries to the programs
 # directory and tell CPack that they belong to the applications component
@@ -137,30 +143,75 @@ install(FILES ${PLATFORMS_FILES}
         COMPONENT SharedLib)
 
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME
-        DESTINATION bin/
+        RUNTIME DESTINATION bin/
         COMPONENT applications
-        PERMISSIONS OWNER_EXECUTE)
+        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+        GROUP_EXECUTE GROUP_READ)
 
 install(TARGETS runTests
-        RUNTIME
-        DESTINATION bin/
+        RUNTIME DESTINATION bin/
         COMPONENT applications
-        PERMISSIONS OWNER_EXECUTE)
+        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+        GROUP_EXECUTE GROUP_READ)
+
+install(TARGETS Standard_deviation
+        RUNTIME DESTINATION bin/
+        COMPONENT applications
+        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+        GROUP_EXECUTE GROUP_READ)
 
 ########### Add uninstall target ###############
 ADD_CUSTOM_TARGET(uninstall
         "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake")
 
+get_target_property(QtCore_location Qt5::Core LOCATION)
+install(FILES ${QtCore_location} DESTINATION bin/dependencies)
+
+get_target_property(QtWidgets_location Qt5::Widgets LOCATION)
+install(FILES ${QtWidgets_location} DESTINATION bin/dependencies)
+
+get_target_property(QtGui_location Qt5::Gui LOCATION)
+install(FILES ${QtGui_location} DESTINATION bin/dependencies)
+
+### Additional folders to clean ###
+set(DEPLOY_CLEAN
+        Testing
+        cmake_install.cmake
+        CMakeCache.txt
+        CPackConfig.cmake
+        CPackSourceConfig.cmake
+        CTestTestfile.cmake
+        *.pc
+        CMakeFiles
+        cmake-build-debug
+        *.cbp
+        _CPack_Packages
+        bin
+        Makefile)
+
+ADD_CUSTOM_TARGET(deployclean @echo cleaning for source distribution)
+
+ADD_CUSTOM_COMMAND(
+        DEPENDS clean
+        COMMENT "distribution clean"
+        COMMAND rm
+        ARGS    -Rf CMakeTmp ${DEPLOY_CLEAN}
+        TARGET  deployclean
+)
+
+#SET_DIRECTORY_PROPERTIES(PROPERTIES
+ #       ADDITIONAL_MAKE_CLEAN_FILES "Makefile")
+
 ### CPack ###
+set(CPACK_RPM_COMPONENT_INSTALL ON)
 if(WIN32)
-    set(CPACK_GENERATOR "WIN32")
+    set(CPACK_GENERATOR "ZIP;NSIS;PackageMaker")
 elseif(UNIX)
-    set(CPACK_GENERATOR "TGZ")
+    set(CPACK_GENERATOR "TGZ;ZIP")
 endif(WIN32)
 
 set(CPACK_PACKAGE_NAME "Calculator-ShatteredButWhole")
 set(CPACK_PACKAGE_VENDOR "ShatteredButWhole")
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "CpackCalculator")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "Calculator-ShatteredButWhole")
 
 include(CPack)
