Added Additional files to remove.
Files generated by doxygen

Signed-off-by: hahaSK <xlahvi00@vutbr.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -187,7 +187,11 @@ set(DEPLOY_CLEAN
         *.cbp
         _CPack_Packages
         bin
-        Makefile)
+        Makefile
+        .vs
+        .idea
+        latex
+        html)
 
 ADD_CUSTOM_TARGET(deployclean @echo cleaning for source distribution)
 
