Edit structure of adressary for submitting, Fix pack and clean targets
The structure was edited to fit the requirements for submitting.
Fixed pack and clean targets of makefile. The if and else statements were switched and now make uninstall is made when it should be

Signed-off-by: xsvehl09 <xsvehl09@stud.fit.vutbr.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -185,12 +185,15 @@ set(DEPLOY_CLEAN
         CMakeFiles
         cmake-build-debug
         *.cbp
+        *.ilk
         _CPack_Packages
         bin
         Makefile
         .vs
         .idea
         latex
+        ../.vs
+        ../.idea
         html)
 
 ADD_CUSTOM_TARGET(deployclean @echo cleaning for source distribution)
